--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -194,6 +194,15 @@
   }
 }
 
+.lms-ui-icon-dns {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-accusoft;
+  }
+}
+
 .lms-ui-icon-debitnote,
 .lms-ui-icon-dnote {
   .fa-icon;
@@ -212,6 +221,15 @@
   .lms-ui-icon;
   &:before {
     content: @fa-var-money-bill;
+  }
+}
+
+.lms-ui-icon-domain {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-arrow-alt-circle-up;
   }
 }
 
@@ -1390,6 +1408,7 @@
 
 }
 
+.lms-ui-icon-alias,
 .lms-ui-icon-externalid {
   .fa-icon;
   .fas;
@@ -1663,6 +1682,15 @@
   }
 }
 
+.lms-ui-icon-accounts {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-bars;
+  }
+}
+
 .lms-ui-icon-customer-status-connected {
   .fa-icon;
   .fas;
@@ -1845,7 +1873,7 @@
   .fas;
   .lms-ui-icon;
   &:before {
-    content: @fa-var-clock;
+    content: @fa-var-book;
   }
 }
 
