--- a/templates/default/domain/domaininfo.html
+++ b/templates/default/domain/domaininfo.html
@@ -6,155 +6,162 @@
 <style>
 
     span.warning {
-        color: brown;
+        color: orange;
+    }
+    .buttons {
+        align: right;
     }
 
 </style>
 
-<H1>{$layout.pagetitle}</H1>
-<TABLE class="lmsbox">
-    <THEAD>
-	<TR>
-		<TD width="1%">
-			<img src="img/domain.gif" alt="">
-		</TD>
-		<TD width="1%">
-			<B>{trans("Name:")}</B>
-		</TD>
-		<TD width="98%">
-			<B>{$domain.name}</B>
-		</TD>
-	</TR>
-    </THEAD>
-    <TBODY>
-	<TR>
-    		<TD width="1%">
-            		<img src="img/customer.gif" alt="">
-	        </TD>
-		<TD width="1%">
-			<B>{trans("Owner:")}</B>
-		</TD>
-		<TD width="98%"class="fright">
-			{if !$domain.ownerid}{trans("SYSTEM DOMAIN")}
-			{else}<A href="?m=customerinfo&id={$domain.ownerid}">{$domain.customername}</A>{/if}
-		</TD>
-	</TR>
-       <TR>
-                <TD width="1%">
-                        <img src="img/alias.gif" alt="">
-                </TD>
-                <TD width="1%" nowrap>
-                        <B>{trans("Domain type:")}</B>
-                </TD>
-                <TD width="98%">
-                        {$domain.type|default:0}
-                </TD>
-        </TR>
-	<TR>
-		<TD width="1%">
-			<img src="img/mail.gif" alt="">
-		</TD>
-		<TD width="1%" nowrap>
-			<B>{trans("Backup MX support:")}</B>
-		</TD>
-		<TD width="98%">
-			{if $domain.mxbackup}{trans("yes")}{else}{trans("no")}{/if}
-		</TD>
-	</TR>
-	<tr>
-		<td colspan="2" class="nobr bold">
-			{icon name="ssl" label="SSL certificate"}
-		</td>
-		<td>
-			{if $domain.ssl}{trans("yes")}{else}{trans("no")}{/if}
-				{if empty($domain.ssl_expirationdate)}
-					{$expirationdate = trans("unknown/other")}
-				{else}
-					{$expirationdate = $domain.ssl_expirationdate|date_format:"Y/m/d"}
-					{$secstoexpiration = $domain.ssl_expirationdate - $smarty.now}
-					{if ($secstoexpiration) <= 14*86400 && $secstoexpiration > 0}
-						<span class="warning">
-							{trans("SSL certificate near expiration!")}
-						</span>
-					{/if}
-					{if $domain.ssl_expirationdate <= $smarty.now}
-						<span class="alert">
-							{trans("SSL certificate expired!")}
-						</span>
-					{/if}
-				{/if}
-				({t a=$expirationdate}expires $a{/t})
-		</td>
-	</tr>
-	<TR>
-		<TD width="1%">
-			<img src="img/account.gif" alt="">
-		</TD>
-		<TD width="1%" nowrap>
-		        <B>{trans("Accounts number:")}</B>
-		</TD>
-		<TD width="98%">
-			{$domain.accountcnt|default:0}
-	        </TD>
-	</TR>
-	<TR>
-		<TD width="1%">
-			<img src="img/alias.gif" alt="">
-		</TD>
-		<TD width="1%" nowrap>
-		        <B>{trans("Aliases number:")}</B>
-		</TD>
-		<TD width="98%">
-			{$domain.aliascnt|default:0}
-	        </TD>
-	</TR>
-        <TR>
-                <TD width="1%">
-                        <img src="img/dns.gif" alt="">
-                </TD>
-                <TD width="1%" nowrap>
-                        <B>{trans("Records number:")}</B>
-                </TD>
-                <TD width="98%">
-                        {$domain.recordscnt|default:0}
-                </TD>
-        </TR>
-{if $domain.description}
-	<TR>
-		<TD width="1%">
-			<img src="img/info.gif" alt="">
-		</TD>
-		<TD width="1%" nowrap>
-		        <B>{trans("Description:")}</B>
-		</TD>
-		<TD width="98%">
-			<TABLE WIDTH="100%" CELLPADDING="5">
-                                <TR>
-			                <TD CLASS="fall superlight">
-			                        {$domain.description|replace:"\n":"<BR>"}
-			                </TD>
-			        </TR>
-			</TABLE>
-	        </TD>
-	</TR>
-{/if}
-	<TR>
-		<TD align="right" colspan="3">
-			<A href="?m=recordlist&d={$domain.id}">{trans("Records")} <IMG src="img/dns.gif" alt="{trans("Records")}"></A>
-			<A href="?m=accountlist&d={$domain.id}">{trans("Accounts")} <IMG src="img/account.gif" alt="{trans("Accounts")}"></A>
-			<A href="?m=aliaslist&d={$domain.id}">{trans("Aliases")} <IMG src="img/alias.gif" alt="{trans("Aliases")}"></A>
-			<A href="?m=domainedit&id={$domain.id}" accesskey="e">{trans("Edit")} <img src="img/save.gif" alt=""></A>
-			<A id="delete-domain" href="?m=domaindel&id={$domain.id}">{trans("Delete")} <img src="img/delete.gif" alt=""></A>
-		</TD>
-	</TR>
-    </TBODY>
-</TABLE>
-	<script>
-		$('#delete-domain').click(function() {
-			confirmDialog($t("Are you sure, you want to delete that domain and all accounts/aliases in that domain?"), this).done(function() {
-				location.href = $(this).attr('href');
-			});
-			return false;
-		});
-	</script>
+<h1>{$layout.pagetitle}</h1>
+
+<table class="lmsbox">
+    <colgroup>
+        <col style="width: 1%;">
+        <col style="width: 99%;">
+    </colgroup>
+    <thead>
+        <tr>
+            <td class="nobr bold" colspan=2>
+                {icon name='domain' label='Name'} {$domain.name}
+            <td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="nobr">
+                {icon name='owner' label="Owner"}
+            </td>
+            <td>
+                {if !$domain.ownerid}
+                    {trans("SYSTEM DOMAIN")}
+                {else}
+                    <a href="?m=customerinfo&id={$domain.ownerid}">{$domain.customername}</a>
+                {/if}
+            </td>
+        </tr>
+           <tr>
+                <td class="nobr">
+                    {icon name='alias' label='Domain type:'}
+                </td>
+                <td>
+                    {$domain.type|default:0}
+                </td>
+            </tr>
+        <tr>
+            <td class="nobr">
+                {icon name='mail' label='Backup MX support'}
+            </td>
+            <td>
+                {if $domain.mxbackup}{trans("yes")}{else}{trans("no")}{/if}
+            </td>
+        </tr>
+        <tr>
+            <td class="nobr">
+                {icon name='ssl' label='SSL certificate'}
+            </td>
+            <td>
+                {if $domain.ssl}{trans("yes")}{else}{trans("no")}{/if}
+                {if empty($domain.ssl_expirationdate)}
+                    {$expirationdate = trans("unknown/other")}
+                {else}
+                    {$secstoexpiration = $domain.ssl_expirationdate - $smarty.now}
+                    {if ($secstoexpiration) <= 14*86400 && $secstoexpiration > 0}
+                        <span class="warning">
+                            {trans("SSL certificate near expiration!")}
+                        </span>
+                    {/if}
+                    {if $domain.ssl_expirationdate <= $smarty.now}
+                        <span class="alert">
+                            {trans("SSL certificate expired!")}
+                        </span>
+                    {/if}
+                {/if}
+                ({t a=$domain.ssl_expirationdate|date_format:"Y/m/d"}expires $a{/t})
+            </td>
+        </tr>
+        <tr>
+            <td class="nobr">
+                {icon name='warning' label='Domain renewal date'}
+            </td>
+            <td>
+                {if !$domain.renewaldate}{trans("unknown/other")}{/if}
+                {if empty($domain.renewaldate)}
+                    {$renewaldate = trans("unknown/other")}
+                {else}
+                    {$secstorenewal = $domain.renewaldate - $smarty.now}
+                    {if ($secstorenewal) <= 14*86400 && $secstorenewal > 0}
+                        <span class="warning">
+                            {trans('Domain renewal date is coming!')}
+                        </span>
+                    {/if}
+                    {if $domain.renewaldate <= $smarty.now}
+                        <span class="alert">
+                            {trans('Domain expired!')}
+                        </span>
+                    {/if}
+                {/if}
+                ({t a=$domain.renewaldate|date_format:'Y/m/d'}expires $a{/t})
+            </td>
+        </tr>
+        <tr>
+            <td class='nobr'>
+                {icon name='menu' label='Accounts number'}
+            </td>
+            <td>
+                {$domain.accountcnt|default:0}
+            </td>
+        </tr>
+        <tr>
+            <td class='nobr'>
+                {icon name='alias' label='Aliases number'}
+            </td>
+            <td>
+                {$domain.aliascnt|default:0}
+            </td>
+        </tr>
+        <tr>
+            <td class='nobr'>
+                {icon name='accounting' label='Records number:'}
+            </td>
+            <td>
+                {$domain.recordscnt|default:0}
+            </td>
+        </tr>
+        {if $domain.description}
+        <tr>
+            <td class='nobr'>
+                {icon name='description' label='Description:'}
+            </td>
+            <td>
+                <table width="100%" cellpadding="5">
+                    <tr>
+                        <td class="fall superlight">
+                            {$domain.description|replace:"\n":"<strongR>"}
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        {/if}
+        <tr>
+            <td class="buttons" colspan="3">
+                {button href="?m=recordlist&d={$domain.id}" label='Records' icon='accounting'}
+                {button href="?m=accountlist&d={$domain.id}" label='Accounts' icon='accounts'}
+                {button href="?m=aliaslist&d={$domain.id}" label='Aliases' icon='alias'}
+                {button href="?m=domainedit&id={$domain.id}" accesskey="e" label="Edit" icon='save'}
+                {button href="?m=domaindel&id={$domain.id}" label='Delete' icon='delete' id='delete-domain'}
+            </td>
+        </tr>
+    </tbody>
+</table>
+    <script>
+        $('#delete-domain').click(function() {
+            confirmDialog($t("Are you sure, you want to delete that domain and all accounts/aliases in that domain?"), this).done(function() {
+                location.href = $(this).attr('href');
+            });
+            return false;
+        });
+    </script>
 {/block}
