--- a/templates/default/customer/customeractions.html
+++ b/templates/default/customer/customeractions.html
@@ -32,7 +32,13 @@
 							<input type="checkbox" name="cutoffstopindefinitely" value="1" onchange="$('#cutoffstop').css('display', this.checked ? 'none' : '');"{if $customerinfo.cutoffstop == intval(pow(2, 31) - 1)} checked{/if}>
 							{trans("indefinitely")}
 						</label>&nbsp;
-						<INPUT type="text" name="cutoffstop" id="cutoffstop" {if $customerinfo.cutoffstop == intval(pow(2, 31) - 1)}style="display: none;"{elseif $customerinfo.cutoffstop}value="{$customerinfo.cutoffstop|date_format:"Y/m/d"}"{/if} size="10" {tip class="lms-ui-date" text="Select date of cutoff suspending (optional)" trigger="cutoffstop"}>
+						<input type="text" name="cutoffstop" id="cutoffstop"
+							{if $customerinfo.cutoffstop == intval(pow(2, 31) - 1)} style="display: none;"
+							{elseif $customerinfo.cutoffstop} value="{$customerinfo.cutoffstop|date_format:"Y/m/d"}"
+							{/if}
+							size="10"
+							{tip class="lms-ui-date" text="Select date of cutoff suspending (optional)" trigger="cutoffstop"}>
+						{hint content="Select date of cutoff suspending (optional)"}
 					</TD>
 					<TD width="1%" class="nobr text-right">
 						<A href="javascript:document.cutoffstopaction.submit()">{trans("Submit")} <i class="lms-ui-icon-save"></i></a>
