enhancement: added 'voip_billing_preparation' hook to allow plugins obtains billing records from external sources and store them in local database

--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -128,9 +128,9 @@
 					{customerlist
 						form="choosefilter"
 						customers=$voipownerlist.name
-						selected=$listdata.fownerid
+						selected=$listdata.fvownerid
 						version=2
-						inputname="fownerid"
+						inputname="fvownerid"
 						customOnChange="CustomerChanged($(this).val());"
 					}
 
