--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -124,46 +124,48 @@
 											{/if}
 										</td>
 									</tr>
-									{if $customerinfo.icn != ""}
-									<tr>
-										<td class="valign-top">
-											{icon name="user-id-number"}
-										</td>
-    									<td>
-											{trans("Identity document")}
-											<br>
-											{if isset($_IDENTITY_TYPES[$customerinfo.ict])}
-												{trans($_IDENTITY_TYPES[$customerinfo.ict])}
-											{/if}
-											{$customerinfo.icn|escape}
-											{icon name="copy" class="lms-ui-button-clipboard" data_clipboard_text=$customerinfo.icn}
-											{if $customerinfo.icexpires !== ''}
-												{if $customerinfo.icexpires > 0}
-													{textformat assign="icexpires"}
-														{strip}
-															<span{if $customerinfo.icexpires - time() < 31 * 86400} class="lms-ui-alert bold"{/if}>
-																{$customerinfo.icexpires|date_format:"Y-m-d"}
-															<span>
-														{/strip}
-													{/textformat}
-													({t a=$icexpires}expires $a{/t})
-												{elseif $customerinfo.icexpires === '0'}
-													({trans("never expires")})
-												{/if}
-											{/if}
-										</td>
-									</tr>
-									{/if}
-									{if $customerinfo.ssn != ""}
-									<tr>
-										<td>
-											{icon name="user-id-number" class="lms-ui-button-clipboard" data_clipboard_text=$customerinfo.ssn}
-										</td>
-										<td>
-											{trans("SSN")}
-											{$customerinfo.ssn|escape}
-										</td>
-									</tr>
+									{if !ConfigHelper::checkPrivilege('hide_customer_sensitive_data')}
+										{if $customerinfo.icn != ""}
+											<tr>
+												<td class="valign-top">
+													{icon name="user-id-number"}
+												</td>
+												<td>
+													{trans("Identity document")}
+													<br>
+													{if isset($_IDENTITY_TYPES[$customerinfo.ict])}
+														{trans($_IDENTITY_TYPES[$customerinfo.ict])}
+													{/if}
+													{$customerinfo.icn|escape}
+													{icon name="copy" class="lms-ui-button-clipboard" data_clipboard_text=$customerinfo.icn}
+													{if $customerinfo.icexpires !== ''}
+														{if $customerinfo.icexpires > 0}
+															{textformat assign="icexpires"}
+																{strip}
+																	<span{if $customerinfo.icexpires - time() < 31 * 86400} class="lms-ui-alert bold"{/if}>
+																		{$customerinfo.icexpires|date_format:"Y-m-d"}
+																	<span>
+																{/strip}
+															{/textformat}
+															({t a=$icexpires}expires $a{/t})
+														{elseif $customerinfo.icexpires === '0'}
+															({trans("never expires")})
+														{/if}
+													{/if}
+												</td>
+											</tr>
+										{/if}
+										{if $customerinfo.ssn != ""}
+											<tr>
+												<td>
+													{icon name="user-id-number" class="lms-ui-button-clipboard" data_clipboard_text=$customerinfo.ssn}
+												</td>
+												<td>
+													{trans("SSN")}
+													{$customerinfo.ssn|escape}
+												</td>
+											</tr>
+										{/if}
 									{/if}
 									{if $customerinfo.ten != ""}
 									<tr>
