--- a/templates/default/customer/customeradd.html
+++ b/templates/default/customer/customeradd.html
@@ -244,19 +244,21 @@
 						</div>
 					</TD>
 				</TR>
-				<tr>
-					<td>{trans("SSN")}</td>
-					<td>
-						<input type="text" size="30" value="{$customeradd.ssn}" name="customeradd[ssn]"
-						    {tip trigger="ssn"}>
-						{if $customeradd.ssnwarning}
-							<input type="hidden" name="customeradd[ssnwarning]" value="1">
-						{/if}
-						{if $customeradd.ssnexistencewarning}
-							<input type="hidden" name="customeradd[ssnexistencewarning]" value="1">
-						{/if}
-					</td>
-				</tr>
+				{if !ConfigHelper::checkPrivilege('hide_customer_sensitive_data')}
+					<tr>
+						<td>{trans("SSN")}</td>
+						<td>
+							<input type="text" size="30" value="{$customeradd.ssn}" name="customeradd[ssn]"
+								{tip trigger="ssn"}>
+							{if $customeradd.ssnwarning}
+								<input type="hidden" name="customeradd[ssnwarning]" value="1">
+							{/if}
+							{if $customeradd.ssnexistencewarning}
+								<input type="hidden" name="customeradd[ssnexistencewarning]" value="1">
+							{/if}
+						</td>
+					</tr>
+				{/if}
 				<tr>
 					<td>{trans("TEN")}</td>
 					<td>
@@ -283,60 +285,63 @@
 							tip="Click here to autocomplete company data from GUS REGON database"}
 					</td>
 				</tr>
-				<tr>
-					<td class="valign-top">
-						{icon name="user-id-number"}
-					</td>
-					<td class="cell-flex">
-						<div>
-							<table width="100%">
-								<colgroup>
-									<col style="width: 1%;">
-									<col style="width: 99%;">
-								</colgroup>
-								<tr>
-									<td class="nobr" colspan="2" id="identity-document-box">
-										<fieldset>
-											<legend class="bold">
-												{trans("Identity document")}
-											</legend>
-											<div class="identity-document-properties">
-												<label class="identity-document-property">
-													<span>{trans("Type")}</span>
-													{identitytypes elemname="customeradd[ict]" selected=$customerinfo.ict
-														tip="" trigger="ict"}
-												</label>
-												<label class="identity-document-property">
-													<span>{trans("Number")}</span>
-													{if $customerinfo.icnwarning}
-														<input type="hidden" name="customeradd[icnwarning]" value="1">
-													{/if}
-													<input type="text" value="{$customeradd.icn}" name="customeradd[icn]" size="30"
-														{tip trigger="icn"}>
-												</label>
-												<label class="identity-document-property">
-													<span>{trans("Expires")}</span>
-													<input type="text" value="{if $customeradd.icexpires > 0}{$customeradd.icexpires}{/if}"
-														name="customeradd[icexpires]" size="10" id="icexpires"
-														class="lms-ui-date lms-ui-date-unix"
-														{tip trigger="icexpires"}
-														{if $customeradd.icexpires == -1}disabled{/if}>
-												</label>
-												<label>
-													<input type="checkbox" name="customeradd[icexpires]"
-														id="icexpires-indefinitely"
-														value="-1"{if $customeradd.icexpires == -1}checked{/if}
-														{tip trigger="icexpires-indefinitely"}>
-													{trans("indefinitely")}
-												</label>
-											</div>
-										</fieldset>
-									</td>
-								</tr>
-							</table>
-						</div>
-					</td>
-				</tr>
+				{if !ConfigHelper::checkPrivilege('hide_customer_sensitive_data')}
+					<tr>
+						<td class="valign-top">
+							{icon name="user-id-number"}
+						</td>
+						<td class="cell-flex">
+							<div>
+								<table width="100%">
+									<colgroup>
+										<col style="width: 1%;">
+										<col style="width: 99%;">
+									</colgroup>
+									<tr>
+										<td class="nobr" colspan="2" id="identity-document-box">
+											<fieldset>
+												<legend class="bold">
+													{trans("Identity document")}
+												</legend>
+												<div class="identity-document-properties">
+													<label class="identity-document-property">
+														<span>{trans("Type")}</span>
+														{identitytypes elemname="customeradd[ict]" selected=$customerinfo.ict
+															tip="" trigger="ict"}
+													</label>
+													<label class="identity-document-property">
+														<span>{trans("Number")}</span>
+														{if $customerinfo.icnwarning}
+															<input type="hidden" name="customeradd[icnwarning]" value="1">
+														{/if}
+														<input type="text" value="{$customeradd.icn}" name="customeradd[icn]" size="30"
+															{tip trigger="icn"}>
+													</label>
+													<label class="identity-document-property">
+														<span>{trans("Expires")}</span>
+														<input type="text" value="{if $customeradd.icexpires > 0}{$customeradd.icexpires}{/if}"
+															name="customeradd[icexpires]" size="10" id="icexpires"
+															class="lms-ui-date lms-ui-date-unix"
+															{tip trigger="icexpires"}
+															{if $customeradd.icexpires == -1} disabled{/if}>
+													</label>
+													<label>
+														<input type="checkbox" name="customeradd[icexpires]"
+															id="icexpires-indefinitely"
+															value="-1"
+															{if $customeradd.icexpires == -1} checked{/if}
+															{tip trigger="icexpires-indefinitely"}>
+														{trans("indefinitely")}
+													</label>
+												</div>
+											</fieldset>
+										</td>
+									</tr>
+								</table>
+							</div>
+						</td>
+					</tr>
+				{/if}
 				<tr>
 					<td>{trans("RBE Name:")}</td>
 					<td>
