--- a/templates/default/state/stateadd.html
+++ b/templates/default/state/stateadd.html
@@ -2,49 +2,62 @@
 {block name=title}LMS: {$layout.pagetitle|striphtml}{/block}
 {block name=module_content}
 <!--// $Id$ //-->
-<H1>{$layout.pagetitle}</H1>
-<FORM method="POST" action="?m=stateadd" name="stateadd">
-<INPUT type="submit" class="hiddenbtn">
-<TABLE class="lmsbox">
-    <THEAD>
-	<TR>
-		<TD width="1%">
-			<IMG src="img/state.gif" alt="">
-		</TD>
-		<TD width="1%">
-			<B>{trans("Name:")}</B>
-		</TD>
-		<TD width="98%">
-			<INPUT type="text" name="stateadd[name]" value="{$stateadd.name|escape}" {tip text="Enter state name" trigger="name" bold=1}>
-		</TD>
-	</TR>
-    </THEAD>
-    <TBODY>
-	<TR>
-		<TD width="1%">
-			<IMG src="img/info.gif" alt="">
-		</TD>
-		<TD width="1%" nowrap>
-			<B>{trans("Description:")}</B>
-		</TD>
-		<TD width="98%">
-			<TEXTAREA NAME="stateadd[description]" COLS="45" ROWS="4" {tip text="Enter additional information (optional)"}>{$stateadd.description}</TEXTAREA>
-		</TD>
-	</TR>
-	<TR>
-		<TD align="right" colspan="3">
-			<A href="javascript:document.stateadd.submit();" accesskey="s">{trans("Submit")} <IMG src="img/save.gif" alt=""></A>
-			<A href="?m=statelist">{trans("Cancel")} <IMG src="img/cancel.gif" alt=""></A><BR>
-			<INPUT type="checkbox" name="stateadd[reuse]" value="ON" {if $stateadd.reuse}checked{/if}> {trans("Display this form again, when this state is saved")}
-		</TD>
-	</TR>
-    </TBODY>
-</TABLE>
-<SCRIPT type="text/javascript">
-<!--
-$(function() {
-	$('form[name="stateadd"] [name="stateadd[name]"]').focus();
-});
-//-->
-</SCRIPT>
+<h1>{$layout.pagetitle}</h1>
+<form method="POST" action="?m=stateadd" name="stateadd" id="stateadd">
+	<input type="submit" class="hiddenbtn">
+</form>
+<table class="lmsbox">
+	<colgroup>
+		<col style="width: 1%;">
+		<col style="width: 1%;">
+		<col style="width: 98%;">
+	</colgroup>
+	<thead>
+		<tr>
+			<td>
+				{icon name="location"}
+			</td>
+			<td>
+				<strong>{trans("Name")}</strong>
+			</td>
+			<td>
+				<input type="text" name="stateadd[name]" value="{$stateadd.name|escape}" form="stateadd"
+					{tip text="Enter state name" trigger="name" bold=1}>
+			</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>
+				{icon name="info"}
+			</td>
+			<td class="nobr">
+				<strong>{trans("Description")}</strong>
+			</td>
+			<td>
+				<textarea name="stateadd[description]" form="stateadd" cols="45" rows="4"
+					{tip text="Enter additional information (optional)"}>{$stateadd.description|escape}</textarea>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="3" class="lms-ui-box-buttons">
+				{button type="submit" form="stateadd" accesskey="s" label="Submit" icon="save"}
+				{button label="Cancel" icon="cancel" href="?m=statelist"}
+				<br>
+				<label>
+					<input type="checkbox" name="stateadd[reuse]" form="stateadd" value="ON"
+						{if $stateadd.reuse} checked{/if}>
+					{trans("Display this form again, when this state is saved")}
+				</label>
+			</td>
+		</tr>
+	</tbody>
+</table>
+<script>
+
+	$(function() {
+		$('[name="stateadd[name]"]').focus();
+	});
+
+</script>
 {/block}
