--- a/templates/default/state/statelist.html
+++ b/templates/default/state/statelist.html
@@ -2,71 +2,87 @@
 {block name=title}LMS: {$layout.pagetitle|striphtml}{/block}
 {block name=module_content}
 <!--// $Id$ //-->
-<H1>{$layout.pagetitle}</H1>
-<P><TABLE class="lmsbox">
-    <THEAD>
-	<TR>
-		<TD width="1%" NOWRAP><IMG src="img/state.gif" alt=""> <B>{trans("Name:")}</B></TD>
-		<TD width="1%" align="right" NOWRAP>{trans("ID:")}</TD>
-		<TD width="97%" align="left" NOWRAP>{trans("Description:")}</TD>
-		<TD width="1%" align="right" NOWRAP><a href="?m=stateadd">{trans("Add state")} <img src="img/save.gif" alt=""></a></TD>
-	</TR>
-	{if $listdata.total != 0}
-	<TR>
-		<TD class="lms-ui-pagination" COLSPAN="4">
-			{include file="scroller.html" loop=$statelist}
-		</TD>
-	</TR>
-	{/if}
-    </THEAD>
-    <TBODY>
-	{cycle values="light,lucid" print=false}
-	{section name=statelist loop=$statelist}
-	<TR class="highlight {cycle}" data-name="{$statelist[statelist].name}">
-		<TD NOWRAP onClick="return self.location.href='?m=stateedit&id={$statelist[statelist].id}';">
-			<IMG src="img/state.gif" alt=""> <B>{$statelist[statelist].name}</B>
-		</TD>
-		<TD align="right" NOWRAP onClick="return self.location.href='?m=stateedit&id={$statelist[statelist].id}';">
-			({$statelist[statelist].id|string_format:"%04d"})
-		</TD>
-		<TD align="left" onClick="return self.location.href='?m=stateedit&id={$statelist[statelist].id}';">
-			{$statelist[statelist].description|replace:"\n":"<BR>"}
-		</TD>
-		<TD align="right" NOWRAP>
-			<A class="delete-state" href="?m=statedel&id={$statelist[statelist].id}"><IMG src="img/delete.gif" alt="{trans("Delete")}" title="{trans("Delete")}"></A>
-			<A href="?m=stateedit&id={$statelist[statelist].id}"><IMG src="img/edit.gif" alt="{trans("Edit")}" title="{trans("Edit")}"></A>
-		</TD>
-	</TR>
-	{sectionelse}
-	<tr>
-		<td colspan="4" class="empty-table">
-			{trans("No such states in database.")}
-		</td>
-	</tr>
-	{/section}
-    </TBODY>
-    <TFOOT>
-	{if $listdata.total != 0}
-	<TR>
-		<TD class="lms-ui-pagination" COLSPAN="4">
-			{include file="scroller.html" loop=$statelist}
-		</TD>
-	</TR>
-	{/if}
-	<TR>
-		<TD colspan="4" align="right">
-			<a href="?m=stateadd">{trans("Add state")} <img src="img/save.gif" alt=""></a>
-		</TD>
-	</TR>
-    </TFOOT>
-</TABLE>
-	<script>
-		$('.delete-state').click(function() {
+<h1>{$layout.pagetitle}</h1>
+<table class="lmsbox lms-ui-background-cycle">
+	<colgroup>
+		<col style="width: 1%;">
+		<col style="width: 1%;">
+		<col style="width: 97%;">
+		<col style="width: 1%;">
+	</colgroup>
+	<thead>
+		<tr>
+			<td class="nobr">
+				{icon name="location"}
+				<strong>{trans("Name")}</strong>
+			</td>
+			<td class="text-right nobr">{trans("ID")}</td>
+			<td class="text-left nobr">{trans("Description")}</td>
+			<td class="text-right nobr">
+				{button icon="save" label="Add state" href="?m=stateadd"}
+			</td>
+		</tr>
+		{if $listdata.total != 0}
+			<tr>
+				<td class="lms-ui-pagination" colspan="4">
+					{include file="scroller.html" loop=$statelist}
+				</>
+			</tr>
+		{/if}
+	</thead>
+	<tbody>
+		{foreach $statelist as $state}
+			<tr class="highlight" data-name="{$state.name|escape}">
+				<td class="nobr" data-target-url="?m=stateedit&id={$state.id}">
+					{icon name="location"}
+					<strong>{$state.name|escape}</strong>
+				</td>
+				<td class="text-right nobr" data-target-url="?m=stateedit&id={$state.id}">
+					(#{$state.id})
+				</td>
+				<td class="text-left" data-target-url="?m=stateedit&id={$state.id}">
+					{$state.description|escape|replace:"\n":"<BR>"}
+				</td>
+				<td class="text-right nobr">
+					{button type="link" class="delete-state" data_href="?m=statedel&id={$state.id}"
+						icon="delete" tip="Delete"}
+					{button type="link" href="?m=stateedit&id={$state.id}" icon="edit" tip="Edit"}
+				</td>
+			</tr>
+		{foreachelse}
+			<tr>
+				<td colspan="4" class="empty-table">
+					{trans("No such states in database.")}
+				</td>
+			</tr>
+		{/foreach}
+	</tbody>
+	<tfoot>
+		{if $listdata.total != 0}
+			<tr>
+				<td class="lms-ui-pagination" colspan="4">
+					{include file="scroller.html" loop=$statelist}
+				</td>
+			</tr>
+		{/if}
+		<tr>
+			<td colspan="4" class="text-right">
+				{button icon="save" label="Add state" href="?m=stateadd"}
+			</td>
+		</tr>
+	</tfoot>
+</table>
+<script>
+
+	$(function() {
+		$('.delete-state').click(function () {
 			var name = $(this).closest('tr').attr('data-name');
-			confirmDialog($t("Are you sure, you want to delete state '$a'?", name), this).done(function() {
-				location.href = $(this).attr('href');
+			confirmDialog($t("Are you sure, you want to delete state '$a'?", name), this).done(function () {
+				location.href = $(this).attr('data-href');
 			});
 			return false;
 		});
-	</script>
+	});
+
+</script>
 {/block}
