--- a/userpanel/modules/voip/templates/billing.html
+++ b/userpanel/modules/voip/templates/billing.html
@@ -196,22 +196,28 @@
                                            CLASS="lms-ui-date lms-input"
                                            VALUE="{if isset($params.frangeto)}{$params.frangeto}{/if}">
                                 </TD>
-                                <TD>
-                                    <SELECT SIZE="1" NAME="ftype" CLASS="lms-input">
-                                        <OPTION VALUE="0">{trans("— all —")}</OPTION>
-                                        <OPTION VALUE="{CALL_INCOMING}" {if $params.ftype == CALL_INCOMING} SELECTED{/if}>{trans("<!voip>incoming")}</OPTION>
-                                        <OPTION VALUE="{CALL_OUTGOING}" {if $params.ftype == CALL_OUTGOING} SELECTED{/if}>{trans("<!voip>outgoing")}</OPTION>
-                                    </SELECT>
-                                </TD>
-                                <TD>
-                                    <SELECT SIZE="1" NAME="fstatus" CLASS="lms-input">
-                                        <OPTION VALUE="0">{trans("— all —")}</OPTION>
-                                        <OPTION VALUE="{CALL_ANSWERED}"      {if $params.fstatus == CALL_ANSWERED}  SELECTED{/if}>{trans("answered")}</OPTION>
-                                        <OPTION VALUE="{CALL_NO_ANSWER}"     {if $params.fstatus == CALL_NO_ANSWER} SELECTED{/if}>{trans("no answer")}</OPTION>
-                                        <OPTION VALUE="{CALL_BUSY}"          {if $params.fstatus == CALL_BUSY}      SELECTED{/if}>{trans("<!voip>busy")}</OPTION>
-                                        <OPTION VALUE="{CALL_SERVER_FAILED}" {if $params.fstatus == CALL_SERVER_FAILED} SELECTED{/if}>{trans("server error")}</OPTION>
-                                    </SELECT>
-                                </TD>
+                                <td>
+                                    <select size="1" name="fdirection" class="lms-input">
+                                        <option value="0">{trans("— all —")}</option>
+                                        <option value="{$smarty.const.BILLING_RECORD_DIRECTION_INCOMING}"
+                                            {if $params.fdirection == $smarty.const.BILLING_RECORD_DIRECTION_INCOMING} selected{/if}>{trans("<!voip>incoming")}</option>
+                                        <option value="{$smarty.const.BILLING_RECORD_DIRECTION_OUTGOING}"
+                                            {if $params.fdirection == $smarty.const.BILLING_RECORD_DIRECTION_OUTGOING} selected{/if}>{trans("<!voip>outgoing")}</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <select size="1" name="fstatus" class="lms-input">
+                                        <option value="0">{trans("— all —")}</option>
+                                        <option value="{$smarty.const.BILLING_RECORD_STATUS_ANSWERED}"
+                                            {if $params.fstatus == $smarty.const.BILLING_RECORD_STATUS_ANSWERED} selected{/if}>{trans("answered")}</option>
+                                        <option value="{$smarty.const.BILLING_RECORD_STATUS_NO_ANSWER}"
+                                            {if $params.fstatus == $smarty.const.BILLING_RECORD_STATUS_NO_ANSWER} selected{/if}>{trans("no answer")}</option>
+                                        <option value="{$smarty.const.BILLING_RECORD_STATUS_BUSY}"
+                                            {if $params.fstatus == $smarty.const.BILLING_RECORD_STATUS_BUSY} selected{/if}>{trans("<!voip>busy")}</option>
+                                        <option value="{$smarty.const.BILLING_RECORD_STATUS_SERVER_FAILED}"
+                                            {if $params.fstatus == $smarty.const.BILLING_RECORD_STATUS_SERVER_FAILED} selected{/if}>{trans("server error")}</option>
+                                    </select>
+                                </td>
                             </TR>
                         </TABLE>
                     </FORM>
@@ -254,29 +260,29 @@
                                         <TD>{if $billings[i].callbegintime>60}{floor($billings[i].callbegintime/60)}min{/if} {$billings[i].callbegintime%60}s</TD>
                                         <TD>{if $billings[i].callanswertime>60}{floor($billings[i].callanswertime/60)}min{/if} {$billings[i].callanswertime%60}s</TD>
                                         <TD>
-                                            {if $billings[i].type == CALL_OUTGOING}
+                                            {if $billings[i].direction == $smarty.const.BILLING_RECORD_DIRECTION_OUTGOING}
                                                 {trans("<!voip>outgoing")}
-                                            {elseif $billings[i].type == CALL_INCOMING}
+                                            {elseif $billings[i].direction == $smarty.const.BILLING_RECORD_DIRECTION_INCOMING}
                                                 {trans("<!voip>incoming")}
                                             {/if}
                                         </TD>
                                         <TD>
-                                            {if $billings[i].status == CALL_BUSY}
+                                            {if $billings[i].status == $smarty.const.BILLING_RECORD_STATUS_BUSY}
                                                 {trans("<!voip>busy")}
-                                            {elseif $billings[i].status == CALL_ANSWERED}
+                                            {elseif $billings[i].status == $smarty.const.BILLING_RECORD_STATUS_ANSWERED}
                                                 {trans("answered")}
-                                            {elseif $billings[i].status == CALL_NO_ANSWER}
+                                            {elseif $billings[i].status == $smarty.const.BILLING_RECORD_STATUS_NO_ANSWER}
                                                 {trans("no answer")}
-                                            {elseif $billings[i].status == CALL_SERVER_FAILED}
+                                            {elseif $billings[i].status == $smarty.const.BILLING_RECORD_STATUS_SERVER_FAILED}
                                                 {trans("server error")}
                                             {/if}
                                         </TD>
                                         <TD>{$billings[i].price|money_format}</TD>
                                         <TD STYLE="text-align: right; color: black;">
                                             {if $billings[i].callanswertime}
-                                                {if $billings[i].type == CALL_OUTGOING}
+                                                {if $billings[i].direction == $smarty.const.BILLING_RECORD_DIRECTION_OUTGOING}
                                                     {assign var=flags value=$billings[i].caller_flags}
-                                                {else if $billings[i].type == CALL_INCOMING}
+                                                {else if $billings[i].direction == $smarty.const.BILLING_RECORD_DIRECTION_INCOMING}
                                                     {assign var=flags value=$billings[i].callee_flags}
                                                 {else}
                                                     {assign var=flags value=0}
