--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -47,8 +47,8 @@
         <col style="width: 1%;">
         <col style="width: 1%;">
         <col style="width: 96%;">
-        <col style="width: 1%;" span="7">
-        {assign var="number_of_table_columns" value="11"}
+        <col style="width: 1%;" span="8">
+        {assign var="number_of_table_columns" value="12"}
     </colgroup>
     <thead>
         <tr {tip text="Click on column name to change sorting order"}>
@@ -103,6 +103,13 @@
 					<img src="img/{$direction_check}_order.gif" alt="">
                 {/if}
             </th>
+
+			<th nowrap>
+				<a href="?m=voipaccountbillinglist&o=type{order_check category="type"}">{trans("<!voip>Type")}</a>
+				{if $listdata.order == "type"}
+					<img src="img/{$direction_check}_order.gif" alt="">
+				{/if}
+			</th>
 
 			<th nowrap>
                 <a href="?m=voipaccountbillinglist&amp;o=status{order_check category="status"}">{trans("<!voip>Status")}</a>
@@ -167,6 +174,15 @@
 						<option value="">{trans("— all —")}</option>
 						<option value="{$smarty.const.BILLING_RECORD_DIRECTION_INCOMING}" {if $listdata.fdirection == $smarty.const.BILLING_RECORD_DIRECTION_INCOMING} selected{/if}>{trans("<!voip>incoming")}</option>
 						<option value="{$smarty.const.BILLING_RECORD_DIRECTION_OUTGOING}" {if $listdata.fdirection == $smarty.const.BILLING_RECORD_DIRECTION_OUTGOING} selected{/if}>{trans("<!voip>outgoing")}</option>
+					</select>
+
+					<span>{trans("<!voip>Type")}</span>
+					<select size="1" name="ftype" form="choosefilter">
+						<option value="">{trans("— all —")}</option>
+						<option value="{$smarty.const.BILLING_RECORD_TYPE_CALL}" {if is_numeric($listdata.ftype) && $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_CALL} selected{/if}>{trans("<!voip>call")}</option>
+						<option value="{$smarty.const.BILLING_RECORD_TYPE_SMS}" {if $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_SMS} selected{/if}>{trans("<!voip>SMS")}</option>
+						<option value="{$smarty.const.BILLING_RECORD_TYPE_MMS}" {if $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_MMS} selected{/if}>{trans("<!voip>MMS")}</option>
+						<option value="{$smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER}" {if $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER} selected{/if}>{trans("<!voip>data transfer")}</option>
 					</select>
 
 					<span>{trans("<!voip>Status")}</span>
@@ -264,6 +280,18 @@
 						{trans("<!voip>outgoing")}
 					{elseif $record.direction == $smarty.const.BILLING_RECORD_DIRECTION_INCOMING}
 						{trans("<!voip>incoming")}
+					{/if}
+				</td>
+
+				<td>
+					{if $record.type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+						{trans("<!voip>call")}
+					{elseif $record.type == $smarty.const.BILLING_RECORD_TYPE_SMS}
+						{trans("<!voip>SMS")}
+					{elseif $record.type == $smarty.const.BILLING_RECORD_TYPE_MMS}
+						{trans("<!voip>MMS")}
+					{elseif $record.type == $smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER}
+						{trans("<!voip>data transfer")}
 					{/if}
 				</td>
 
